# juhwan

./: .gitignore  README.md
src/jetank_description/: CMakeLists.txt  add_jenga.sh  jenga.sdf  package.xml
src/jetank_description/config/: display.rviz  gazebo.rviz  gz_bridge.yaml  jetank_controllers.yaml  jetank_nav2.yaml  rc_car_controllers.yaml
src/jetank_description/launch/: gazebo.launch.py  gazebo.launch_backup.py  gazebo1.launch.py  jetank_controllers.launch.py  jetank_description.launch.py  jetank_roles.launch.py
src/jetank_description/maps/: map.yaml
src/jetank_description/meshes/collision/: ANTENNA_L_1.stl  ANTENNA_R_2.stl  ARM_LOWER_1.stl  ARM_LOW_2.stl  ARM_MIDDLE_1.stl  BEARING_1.stl  CAMERA.stl  CAM_HOLDER.stl  DRIVER_WHEEL_L_1.stl  DRIVER_WHEEL_R_2.stl  FREE_WHEEL_L_1.stl  FREE_WHEEL_R_1.stl  MAGNETIC_1.stl  MAGNETIC_BAR_1.stl  MAGNETIC_HOLDER_1.stl  SERVO_END_1.stl  SERVO_LOWER_1.stl  SERVO_TOP_1.stl  SERVO_UPPER_1.stl  base_link.stl
src/jetank_description/meshes/collision_boxes/: ANTENNA_L_1_box.stl  ANTENNA_R_2_box.stl  ARM_LOWER_1_box.stl  ARM_LOW_2_box.stl  ARM_MIDDLE_1_box.stl  BEARING_1_box.stl  CAMERA_box.stl  CAM_HOLDER_box.stl  DRIVER_WHEEL_L_1_box.stl  DRIVER_WHEEL_R_2_box.stl  FREE_WHEEL_L_1_box.stl  FREE_WHEEL_R_1_box.stl  MAGNETIC_1_box.stl  MAGNETIC_BAR_1_box.stl  MAGNETIC_HOLDER_1_box.stl  SERVO_END_1_box.stl  SERVO_LOWER_1_box.stl  SERVO_TOP_1_box.stl  SERVO_UPPER_1_box.stl  base_link_box.stl
src/jetank_description/meshes/visual/: ANTENNA_L_1.stl  ANTENNA_R_2.stl  ARM_LOWER_1.stl  ARM_LOW_2.stl  ARM_MIDDLE_1.stl  BEARING_1.stl  CAM_HOLDER.stl  DRIVER_WHEEL_L_1.stl  DRIVER_WHEEL_R_2.stl  FREE_WHEEL_L_1.stl  FREE_WHEEL_R_1.stl  MAGNETIC_1.stl  MAGNETIC_BAR_1.stl  MAGNETIC_HOLDER_1.stl  SERVO_END_1.stl  SERVO_LOWER_1.stl  SERVO_TOP_1.stl  SERVO_UPPER_1.stl  base_link.stl
src/jetank_description/models/conveyor_belt/: model.config  model.sdf
src/jetank_description/models/conveyor_belt/meshes/: conveyor_belt.blend  conveyor_belt.dae  conveyor_belt.stl  conveyor_belt1.dae
src/jetank_description/models/jenga_magnetic/: model.config  model.sdf
src/jetank_description/plugins/: CMakeLists.txt  conveyor_plugin.cpp
src/jetank_description/scripts/: detach.py  generate_collision_boxes.py  rc_car_pose_tf.py
src/jetank_description/urdf/: base.urdf  jenga.urdf  jetank_controllers.xacro  jetank_main.gazebo  jetank_main.xacro  jetank_materials.xacro  jetank_sensors.xacro
src/jetank_description/worlds/: detachablee_join.sdf  empty_world.sdf
src/jetank_move_test/code/: jetank2.py  jetank2_backup.py  role_conveyor.py  role_jetank2.py  role_rc_car.py  role_top_cctv1.py  role_top_cctv2.py
src/nav2_remote_goal/: package.xml  setup.cfg  setup.py
src/nav2_remote_goal/nav2_remote_goal/: remote_goal.py
src/rc_car_test_description/: setup.py
src/rc_car_test_description/config/: rc_car_controllers.yaml  ros_gz_bridge_gazebo.yaml
src/rc_car_test_description/launch/: display.launch.py  gazebo.launch.py  rc_car_controllers.launch.py
src/rc_car_test_description/rc_car_test_description/: odom_stamp_rewriter.py  scan_frame_rewriter.py  twist_to_joint_cmd.py
src/rc_car_test_description/urdf/: rc_car_test.gazebo  rc_car_test.ros2control  rc_car_test.xacro
src/rc_nav2_bringup/: CMakeLists.txt  package.xml  setup.py
src/rc_nav2_bringup/config/: cartographer_2d.lua  nav2_params.yaml  simple_nav_through_poses.xml  simple_nav_to_pose.xml
src/rc_nav2_bringup/launch/: bringup_all.launch.py  bringup_cartographer.launch.py  bringup_slam_only.launch.py  navigation.launch.py  rf2o.launch.py
src/rc_nav2_bringup/maps/: jetank_map.pgm  jetank_map.yaml  jetank_map1.yaml  jetank_map2.pgm  jetank_map2.yaml  jetank_map3.pgm  jetank_map3.yaml  jetank_map_sdf_only.yaml  jetank_map_sdf_only_h08.pgm  jetank_map_sdf_only_h08.yaml  jetank_map_walls.pgm  jetank_map_walls.yaml
src/rc_nav2_bringup/rc_nav2_bringup/: cmd_vel_bridge.py
src/rc_nav2_bt_nodes/: CMakeLists.txt  package.xml
src/rc_nav2_bt_nodes/behavior_tree/: near_goal_stopped_bt_node.xml
src/rc_nav2_bt_nodes/include/rc_nav2_bt_nodes/: compute_approach_goal.hpp  compute_approach_goals.hpp  near_goal_stopped_condition.hpp
src/rc_nav2_bt_nodes/src/: compute_approach_goal.cpp  compute_approach_goals.cpp  near_goal_stopped_condition.cpp
src/top_cctv_infer/: setup.py
src/top_cctv_infer/launch/: top_cctv_pipeline.launch.py
src/top_cctv_infer/top_cctv_infer/: __init__.py  camera_world_calib.yaml  image_publisher_node_cctv1.py  image_publisher_node_cctv2.py  infer_node.py  infer_service_server_cctv1.py  infer_service_server_cctv2.py  latptop_cam_click_calib.py  obb_inference_node.py  px_points.yaml  test.py  test_real.py
(+10 files in other folders)
