<?xml version="1.0"?>
<package format="3">
  <name>rc_nav2_bt_nodes</name>
  <version>0.1.0</version>
  <description>Custom Nav2 behavior tree nodes for RC car</description>

  <maintainer email="example@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_behavior_tree</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
